--- a/ganttschema.html
+++ b/ganttschema.html
@@ -2,6 +2,7 @@
 <html lang="sv">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ganttschema Handboll</title>
   <script src="https://www.gstatic.com/charts/loader.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
@@ -48,7 +49,13 @@
     function extractDateOnly(dateStr) {
       if (!dateStr) return null;
       const match = dateStr.match(/^(\d{4}-\d{2}-\d{2})/);
-      return match ? new Date(match[1]) : null;
+      if (!match) {
+        console.warn('❌ Ogiltigt datumformat:', dateStr);
+        return null;
+      }
+      const d = new Date(match[1]);
+      if (isNaN(d)) console.warn('❌ Datum kunde inte tolkas:', match[1]);
+      return d;
     }
 
     const colorMap = {
@@ -67,12 +74,14 @@
         download: true,
         header: true,
         complete: function(results) {
+          console.log('✅ Data laddad:', results.data);
           const currentSeason = getCurrentSeason();
           const allData = results.data.filter(e => e['Säsong'] === currentSeason);
-          const types = [...new Set(allData.map(e => e['Typ av händelse']).filter(Boolean))].sort();
+          console.log('🔎 Filtrerad för säsong:', currentSeason, '→', allData.length, 'rader');
 
-          // Fyll filter-dropdown
+          const types = [...new Set(allData.map(e => e['Typ av händelse']).filter(Boolean))].sort();
           const filterSelect = document.getElementById('type-filter');
+
           types.forEach(type => {
             const opt = document.createElement('option');
             opt.value = type;
@@ -82,6 +91,9 @@
 
           filterSelect.addEventListener('change', () => drawChart(allData, filterSelect.value));
           drawChart(allData, filterSelect.value);
+        },
+        error: function(err) {
+          console.error('❌ Fel vid inläsning:', err);
         }
       });
     }
@@ -100,12 +112,18 @@
       dataTable.addColumn({ type: 'string', role: 'style' });
 
       let counter = 1;
+      let addedRows = 0;
+
       dataRows.forEach(e => {
         if (selectedType && e['Typ av händelse'] !== selectedType) return;
 
         const start = extractDateOnly(e['Datum från']);
         const end = extractDateOnly(e['Datum till']);
-        if (!(start instanceof Date) || isNaN(start) || !(end instanceof Date) || isNaN(end)) return;
+
+        if (!(start instanceof Date) || isNaN(start) || !(end instanceof Date) || isNaN(end)) {
+          console.warn('⛔️ Skippad rad pga ogiltiga datum:', e);
+          return;
+        }
 
         const typ = e['Typ av händelse'] || 'Övrigt';
         const color = colorMap[typ] || '#757575';
@@ -121,15 +139,21 @@
           typ,
           color
         ]);
+        addedRows++;
       });
 
+      console.log('✅ Rader i tabell:', addedRows);
+
       const chart = new google.visualization.Gantt(document.getElementById('chart_div'));
-      chart.draw(dataTable, {
-        height: 400 + dataTable.getNumberOfRows() * 30,
-        gantt: {
-          trackHeight: 30
-        }
-      });
+
+      try {
+        chart.draw(dataTable, {
+          height: 400 + dataTable.getNumberOfRows() * 30,
+          gantt: { trackHeight: 30 }
+        });
+      } catch (err) {
+        console.error('❌ Fel vid renderingen av Gantt:', err);
+      }
     }
   </script>
 </body>
